# amb-temp-controller

./: CMakeLists.txt  README.md
doc/: amb-temp-controller_diagram.drawio.xml
scripts/: build.sh  clean-build.sh
src/: CMakeLists.txt  Cooler.cpp  Cooler.h  Heater.cpp  Heater.h  TemperatureDevice.cpp  TemperatureDevice.h  TemperatureSensor.cpp  TemperatureSensor.h  app.cpp  app.h  conf.h  main.cpp  util.cpp  util.h
test/: CMakeLists.txt  Cooler-test.cpp  Heater-test.cpp  TemperatureSensor-test.cpp  app-test.cpp  main-test.cpp
